# BBQRestSys

./: index.html  package-lock.json  package.json  pending_kiosk_orders.json  tailwind.config.js  vite.config.ts
src/: App.vue  main.ts  style.css
src-tauri/: 2  Cargo.toml  bbq_system.db  pending_kiosk_orders.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_create_initial_tables.sql  0002_insert_starter_data.sql
src-tauri/src/: auth.rs  dashboard.rs  inventory.rs  lib.rs  logs.rs  main.rs  models.rs  pos.rs  queue.rs  schedule.rs  staff.rs
src/ClientKiosk/: Clientpos.vue  CustomerMenu.vue
src/authStore/: Login.vue
src/components/layout/: Header.vue  MenuSidebar.vue  Sidebar.vue  header.vue
src/components/modal/: ActiveTabsModal.vue  AddVariantModal.vue  CheckOrderModal.vue  EditInventoryModal.vue  EditPriceModal.vue  MenuItemModal.vue  MenuVariantModal.vue  PosLogsModal.vue  StaffModal.vue  StaffTimesheetModal.vue  ViewLogModal.vue
src/components/ui/: AddStockModal.vue  BaseBadge.vue  BaseButton.vue  BaseCard.vue  BaseInput.vue  CashierOrderDetails.vue  CheckOrderModal.vue  DataLoader.vue  EditInventoryModal.vue  (+7 more)
src/composables/: useResponsive.ts
src/router/: index.ts
src/services/: authService.ts  dashboardService.ts  inventoryService.ts  logService.ts  posService.ts  queueService.ts  scheduleService.ts  staffService.ts
src/stores/: authStore.ts
src/views/: Cashier.vue  Dashboard.vue  Inventory.vue  Login.vue  Logs.vue  Pos.vue  PrepStation.vue  Schedule.vue  Staff.vue
test/: TODO.md  index.html  mm.md
