[package]
name = "bbqrestsys"
version = "0.1.0"
description = "Barbecue POS Hybrid Server"
authors = ["Kian Estrera"]
edition = "2021"

[lib]
name = "bbqrestsys_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri Core (For the Main PC Desktop App)
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
dotenvy = "0.15"

# Axum Web Server (To serve the Raspberry Pis)
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# Database driver
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "migrate"] }

# JSON Serialization/Deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Data types used in your database schema
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
